--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -21,8 +21,8 @@
     "1. **Import required software libraries**: We start with importing required software libraries\n",
     "2. **Read the text that requires processing**: Next we obtain the input text from the preprocessing notebook\n",
     "3. **Named entity recognition**: The text is sent to GPT with a prompt that instructs it to identify entities. The LLM marks entities in markdown format: \\[entity text\\]\\(entity type\\)\n",
-    "4. **Named entity visualization**: The annotated text is displayed with color-coded entity highlighting\n",
-    "5. **Save results**: Save the rewsults of named entity recognition for future processing\n",
+    "4. **Named entity visualization**: The annotated text is displayed with colour-coded entity highlighting\n",
+    "5. **Save results**: Save the results of named entity recognition for future processing\n",
     "\n",
     "This approach leverages the LLM's natural language understanding while producing structured, machine-readable output."
    ]
@@ -55,7 +55,7 @@
     "from dotenv import load_dotenv\n",
     "import hashlib\n",
     "import importlib\n",
-    "from IPython.display import HTML \n",
+    "from IPython.display import clear_output, HTML \n",
     "import json\n",
     "import os\n",
     "import regex\n",
@@ -101,6 +101,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa68a2c2-291f-4d9c-8671-a4f412b36f4e",
+   "metadata": {},
+   "source": [
+    "Here is code for monitoring the progress of the task:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6ee9829e-bca8-49e9-8db6-589f8adaff1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squeal(text=None):\n",
+    "    \"\"\"Clear the output buffer of the current cell and print the given text\"\"\"\n",
+    "    clear_output(wait=True)\n",
+    "    if not text is None: \n",
+    "        print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63d5600a-810a-4843-b213-f5cbc00603cd",
    "metadata": {},
    "source": [
@@ -109,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1b0f1136-7f0c-47a4-8aaf-ce819ebcf45b",
    "metadata": {},
    "outputs": [],
@@ -144,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f01e81fa-5a4a-4ed3-abfd-4008f645dac4",
    "metadata": {},
    "outputs": [
@@ -157,15 +179,15 @@
     }
    ],
    "source": [
-    "infile_name = \"output_11f98441067263d80ee1a6bac27babf0f2c6734b.json\"\n",
+    "infile_name = \"output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json\"\n",
     "\n",
     "\n",
     "with open(infile_name, \"r\") as infile:\n",
     "    input_data = json.load(infile)\n",
     "    infile.close()\n",
     "\n",
-    "text_input = input_data[0][\"text_cleaned\"]\n",
-    "print(text_input)"
+    "texts_input = [text[\"text_cleaned\"] for text in input_data]\n",
+    "print(texts_input[0])"
    ]
   },
   {
@@ -188,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "63fb0248",
    "metadata": {},
    "outputs": [],
@@ -212,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c1cd3431-1a78-4b00-8868-d4d80260039b",
    "metadata": {},
    "outputs": [],
@@ -224,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f4c2434c-50a4-4c1f-82a2-610fad9d247d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_prompt(text_input, target_labels):\n",
+    "def make_prompt(texts_input, target_labels):\n",
     "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
     "    return f\"\"\"\n",
     "Convert the following text into a structured markdown format, where you annotate the entities in the text in the following format: [Tom](PERSON) went to [New York](PLACE).\n",
@@ -238,7 +260,7 @@
     "{target_labels}\n",
     "\n",
     "Do this for the following text:\n",
-    "{text_input}\n",
+    "{texts_input}\n",
     "\n",
     "Only return the markdown output, nothing else.\n",
     "\"\"\""
@@ -246,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a7b893de-c1f1-469b-81bc-d64b40fd32cb",
    "metadata": {},
    "outputs": [],
@@ -270,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [
@@ -278,6 +300,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing text 2\n",
+      "Finished processing\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC). Acquired before 1882. C. 115\n"
      ]
     }
@@ -287,10 +311,14 @@
     "target_labels=[\"PERSON\", \"LOCATION\"]\n",
     "\n",
     "openai_api_key = get_openai_api_key()\n",
-    "prompt = make_prompt(text_input, target_labels)\n",
     "openai_client = connect_to_openai(openai_api_key)\n",
-    "text_output = process_text_with_gpt(openai_client, model, prompt)\n",
-    "print(text_output)"
+    "texts_output = []\n",
+    "for index, text in enumerate(texts_input):\n",
+    "    squeal(f\"Processing text {index + 1}\")\n",
+    "    prompt = make_prompt(text, target_labels)\n",
+    "    texts_output.append(process_text_with_gpt(openai_client, model, prompt))\n",
+    "print(\"Finished processing\")\n",
+    "print(texts_output[0])"
    ]
   },
   {
@@ -313,32 +341,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_entities_from_markdown(text_output):\n",
+    "def extract_entities_from_markdown(texts_output):\n",
     "    \"\"\"Extract the locations and labels of the entities from the markdown and return these\"\"\"\n",
     "    pattern = r'\\[([^\\]]+)\\]\\(([^)]+)\\)'\n",
     "    text_prefix = \"\"\n",
     "    current_char = 0\n",
     "    entities = []\n",
-    "    for match in regex.finditer(pattern, text_output):\n",
-    "        text_prefix += text_output[current_char: match.start()]\n",
+    "    for match in regex.finditer(pattern, texts_output):\n",
+    "        text_prefix += texts_output[current_char: match.start()]\n",
     "        entities.append({\"text\": match.group(1),\n",
     "                         \"label\": match.group(2),\n",
     "                         \"start_char\": len(text_prefix), \n",
     "                         \"end_char\": len(text_prefix) + len(match.group(1))})\n",
     "        text_prefix += match.group(1)\n",
     "        current_char = match.end()\n",
-    "    text_prefix += text_output[current_char:]\n",
+    "    text_prefix += texts_output[current_char:]\n",
     "    return entities, text_prefix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b3cc9469-5296-4221-9703-44521f20b725",
    "metadata": {},
    "outputs": [],
@@ -346,26 +374,26 @@
     "COLORS = {\"PERSON\": \"red\", \"LOCATION\": \"green\", \"OTHER\": \"blue\"}\n",
     "\n",
     "\n",
-    "def mark_entities_in_text(text_input, entities):\n",
+    "def mark_entities_in_text(texts_input, entities):\n",
     "    \"\"\"Convert the text to HTML with colored antities and return these\"\"\"\n",
     "    for entity in reversed(entities):\n",
     "        entity_label = entity[\"label\"] if entity[\"label\"] in COLORS.keys() else \"OTHER\"\n",
-    "        text_input = text_input[:entity[\"end_char\"]] + \"</span>\" + text_input[entity[\"end_char\"]:]\n",
-    "        text_input = (text_input[:entity[\"start_char\"]] + \n",
+    "        texts_input = texts_input[:entity[\"end_char\"]] + \"</span>\" + texts_input[entity[\"end_char\"]:]\n",
+    "        texts_input = (texts_input[:entity[\"start_char\"]] + \n",
     "                      f\"<span style=\\\"border: 1px solid black; color: {COLORS[entity_label]};\\\">\" + \n",
-    "                      text_input[entity[\"start_char\"]:])\n",
-    "    return text_input"
+    "                      texts_input[entity[\"start_char\"]:])\n",
+    "    return texts_input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_llm_output_text(text_llm_output, text_input):\n",
-    "    if text_llm_output != text_input:\n",
+    "def check_llm_output_text(text_llm_output, texts_input):\n",
+    "    if text_llm_output != texts_input:\n",
     "        print(f\"{char_failure} Output text of named entity recognition is different from input text!\")"
    ]
   },
@@ -374,12 +402,12 @@
    "id": "44639606-06d2-442e-b2ec-8fb31d71d921",
    "metadata": {},
    "source": [
-    "Next we call the function to extract the entities from the results, check the output text and visualize the results"
+    "Next we call the function to extract the entities from the results, check the output text and visualize the results, for the first five results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -393,7 +421,19 @@
     {
      "data": {
       "text/html": [
-       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span>. Bronze. Late Period (722-332 BC). Acquired before 1882. C. 115"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"border: 1px solid black; color: green;\">Statue</span> of the goddess <span style=\"border: 1px solid black; color: red;\">Sekhmet</span>. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span>.. Drovetti collection (1824). C. 256"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -404,9 +444,13 @@
     }
    ],
    "source": [
-    "entities, text_llm_output = extract_entities_from_markdown(text_output)\n",
-    "check_llm_output_text(text_llm_output, text_input)\n",
-    "display(HTML(mark_entities_in_text(text_input, entities)))"
+    "entities_all = []\n",
+    "for index, text in enumerate(texts_output):\n",
+    "    entities, text_llm_output = extract_entities_from_markdown(text)\n",
+    "    entities_all.append({\"entities\": entities, \"text_llm_output\": text_llm_output})\n",
+    "    if index < 5:\n",
+    "        check_llm_output_text(text_llm_output, texts_input[index])\n",
+    "        display(HTML(mark_entities_in_text(text_llm_output, entities)))"
    ]
   },
   {
@@ -429,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "bad49629-135b-4651-b5da-c21f5bcec398",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_results(texts):\n",
+    "def save_results(texts, key):\n",
     "    \"\"\"Save preprocessed texts in a json file\"\"\"\n",
     "    json_string = json.dumps(texts, ensure_ascii=False, indent=2)\n",
     "    hash = hashlib.sha1(json_string.encode(\"utf-8\")).hexdigest()\n",
-    "    output_file_name = f\"output_ner_{hash}.json\"\n",
+    "    output_file_name = f\"output_{key}{hash}.json\"\n",
     "    with open(output_file_name, \"w\", encoding=\"utf-8\") as output_file:\n",
     "        print(json_string, end=\"\", file=output_file)\n",
     "        output_file.close()\n",
@@ -462,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -470,13 +514,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_ner_150334aba010e6a87e5e6c3735af38b61ce5b5e4.json\n"
+      "️✅ Saved preprocessed texts to file output_ner_6a00b1a3f413bd52f53deaff4cf5a5179c59c7a4.json\n"
      ]
     }
    ],
    "source": [
-    "input_data[0][\"entities\"] = entities\n",
-    "save_results(input_data)"
+    "for index, entities in enumerate(entities_all):\n",
+    "    input_data[index][\"entities\"] = entities[\"entities\"]\n",
+    "    input_data[index][\"text_llm_output\"] = entities[\"text_llm_output\"]\n",
+    "save_results(input_data, key=\"ner_\")"
    ]
   },
   {
@@ -486,7 +532,7 @@
    "source": [
     "## 6. Alternatives for named entity recognition\n",
     "\n",
-    "Here we define some alternatives for recognising named enties, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI. "
+    "Here we define some alternatives for recognising named entities, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI. "
    ]
   },
   {
@@ -509,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0c8c4531-2d1a-49dd-9c7b-ae71910c8ed0",
    "metadata": {},
    "outputs": [],
@@ -521,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -542,17 +588,26 @@
     "    if language_id not in LANG_MODELS.keys():\n",
     "        print(\"{char_failure} warning: unknown language {language_id}. Switching to multilingual model...\")\n",
     "        language_id = \"xx\"\n",
-    "    return spacy.load(LANG_MODELS[language_id])"
+    "    try:\n",
+    "        nlp = spacy.load(LANG_MODELS[language_id])\n",
+    "    except:\n",
+    "        try:\n",
+    "            print(f\"Model {LANG_MODELS[language_id]} not found, trying to download it...\")\n",
+    "            spacy.cli.download(LANG_MODELS[language_id])\n",
+    "            nlp = spacy.load(LANG_MODELS[language_id])\n",
+    "        except:\n",
+    "            raise(RuntimeError(f\"{char_failure} Cannot find language model {LANG_MODELS[language_id]}!\"))\n",
+    "    return nlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_spacy_entities_to_markdown(doc, text_input):\n",
+    "def convert_spacy_entities_to_markdown(doc, texts_input):\n",
     "    \"\"\"Extract the entities recognised by Spacy and return them in a markdown string\"\"\"\n",
     "    entities = [{\"text\": entity.text,\n",
     "                 \"label\": entity.label_,\n",
@@ -562,11 +617,11 @@
     "        if entity[\"label\"] in [\"FAC\", \"GPE\", \"LOC\"]:\n",
     "            entity[\"label\"] = \"LOCATION\"\n",
     "        if entity[\"label\"] in [\"LOCATION\", \"PERSON\"]:\n",
-    "            text_input = (text_input[:entity[\"end_char\"]] + \n",
+    "            texts_input = (texts_input[:entity[\"end_char\"]] + \n",
     "                          f\"]({entity['label']})\" + \n",
-    "                          text_input[entity[\"end_char\"]:])\n",
-    "            text_input = text_input[:entity[\"start_char\"]] + \"[\" + text_input[entity[\"start_char\"]:]\n",
-    "    return text_input"
+    "                          texts_input[entity[\"end_char\"]:])\n",
+    "            texts_input = texts_input[:entity[\"start_char\"]] + \"[\" + texts_input[entity[\"start_char\"]:]\n",
+    "    return texts_input"
    ]
   },
   {
@@ -579,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
@@ -587,22 +642,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing text 2\n",
+      "Finished processing\n",
       "Statuette of the god Anubis. [Bronze](PERSON). Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
    ],
    "source": [
-    "language_id = detect_text_language(text_input)\n",
-    "nlp = load_spacy_model(language_id)\n",
-    "doc = nlp(text_input)\n",
-    "text_output = convert_spacy_entities_to_markdown(doc, text_input)\n",
-    "print(text_output)"
+    "texts_output = []\n",
+    "last_language_id = \"\"\n",
+    "for index, text in enumerate(texts_input):\n",
+    "    squeal(f\"Processing text {index + 1}\")\n",
+    "    language_id = detect_text_language(text)\n",
+    "    if language_id != last_language_id:\n",
+    "        nlp = load_spacy_model(language_id)\n",
+    "        last_language_id = language_id\n",
+    "    doc = nlp(text)\n",
+    "    texts_output.append(convert_spacy_entities_to_markdown(doc, text))\n",
+    "print(\"Finished processing\")\n",
+    "print(texts_output[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad226e6e-ebfb-4730-93ac-0c20bc029c26",
+   "id": "c25d547c-0aee-47d4-8e4d-97d70fdf9b69",
    "metadata": {},
    "outputs": [],
    "source": []
