gpt processed 100 texts

--- a/notebooks/tasks/disambiguation-candidates.ipynb
+++ b/notebooks/tasks/disambiguation-candidates.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37a02df6",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "684d7adb-4839-49be-9a32-3b0fa15700e9",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4e29cb7a-142b-40ba-8b0e-752593db94e4",
    "metadata": {},
    "outputs": [],
@@ -131,17 +131,25 @@
    "id": "b559246c-da0e-4d94-b857-65527220e7f6",
    "metadata": {},
    "source": [
-    "## 2. Read the text that requires processing\n",
+    "## 2. Read the texts that requires processing\n",
     "\n",
-    "The text should have been processed by the ner.ipynb notebook. The file read here is an output file of that notebook. We select the texts and show the first one."
+    "The texts should have been processed by the ner.ipynb notebook. The file read here is an output file of that notebook. We read the texts and the associated metadata and show the first text with its entities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e9f3d702-647d-4c64-acab-8da3028f7acb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'text': 'Anubis', 'label': 'PERSON', 'start_char': 21, 'end_char': 27}]}\n"
+     ]
+    }
+   ],
    "source": [
     "infile_name = \"output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\"\n",
     "\n",
@@ -157,12 +165,22 @@
    "id": "7da6363b-74e5-4177-b3f4-5cf2f7c3fafe",
    "metadata": {},
    "source": [
-    "## 3. Disambiguation candidate generation"
+    "## 3. Disambiguation candidate generation\n",
+    "\n",
+    "We need candidate ids for the entities to make the task for the LLM easier. We obtain these candidate ids by searching for the entities in wikidata.org. The search step returns seven candidate ids with a description text for each of them. In order not to overload the website, we use a cache for storing entities that were looked up earlier. We also wait for 10 seconds (variable `SLEEP_TIME_FETCH_PAGE`) between the searches. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5e38391-d3ff-476c-b4ef-56f795a19f60",
+   "metadata": {},
+   "source": [
+    "First we define five helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "495787e4-d72b-43c4-9834-dbd65174cef1",
    "metadata": {},
    "outputs": [],
@@ -170,7 +188,7 @@
     "SLEEP_TIME_FETCH_PAGE = 10\n",
     "USER_AGENT = \"Pelagios/0.0 (https://github.com/pelagios/; e.tjongkimsang@esciencecenter.nl) generic-library/0.0\"\n",
     "\n",
-    "def get_data_from_wikidata(entity_text):\n",
+    "def query_wikidata_for_single_entity(entity_text):\n",
     "    \"\"\"Read Wikidata data on entity_text and return it\"\"\"\n",
     "    headers = {\n",
     "        \"User-Agent\": USER_AGENT,\n",
@@ -191,14 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "bb658c10-b74e-4a2e-851a-9fb4a2dfba5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISAMBUGUATION_CACHE_FILE = \"disambiguation_cache_wikidata.json\"\n",
+    "DISAMBUGUATION_CACHE_FILE_WIKIDATA = \"disambiguation_cache_wikidata.json\"\n",
     "\n",
     "def read_json_file(file_name):\n",
+    "    \"\"\"Read a json file and return its contents\"\"\"\n",
     "    with open(file_name, \"r\") as infile:\n",
     "        json_data = json.load(infile)\n",
     "        infile.close()\n",
@@ -207,12 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e59f1969-2ad2-4bf9-aff1-d200255d2bcc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_json_file(file_name, json_data):\n",
+    "    \"\"\"Write json data to a file with the specified name\"\"\"\n",
     "    json_string = json.dumps(json_data, ensure_ascii=False, indent=2)\n",
     "    with open(file_name, \"w\") as outfile:\n",
     "        print(json_string, end=\"\", file=outfile)\n",
@@ -221,22 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17f3399c-b421-405b-9810-f6d85db8abc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "disambiguation_cache = read_json_file(DISAMBUGUATION_CACHE_FILE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c4087c95-0ee6-4b3e-865e-1258c7d4fbfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "entities = [{\"entity_text\": entity[\"text\"],\n",
+    "def extract_entities_from_ner_input(texts_input):\n",
+    "    \"\"\"For each entity in the input text return the entity text, context text and context text id\"\"\" \n",
+    "    return [{\"entity_text\": entity[\"text\"],\n",
     "             \"text_id\": index,\n",
     "             \"text\": text[\"text_cleaned\"]} \n",
     "            for index, text in enumerate(texts_input) for entity in text[\"entities\"]]"
@@ -244,40 +256,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "31eaf53f-ce28-4125-81bd-567a3ab793fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for entity in entities:\n",
-    "    if entity[\"entity_text\"] not in disambiguation_cache.keys():\n",
-    "        squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
-    "        wikidata_data = get_data_from_wikidata(entity[\"entity_text\"])\n",
-    "        disambiguation_cache[entity[\"entity_text\"]] = [{\"id\": candidate[\"id\"], \n",
-    "                                                      \"description\": candidate[\"description\"]} \n",
-    "                                                      for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
-    "                                                      if \"description\" in candidate.keys()]"
+    "def find_wikidata_candidates_for_entities(entities):\n",
+    "    \"\"\"Lookup candidate ids for the entities on wikidata.org and return them\"\"\"\n",
+    "    wikidata_cache = read_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA)\n",
+    "    for entity in entities:\n",
+    "        if entity[\"entity_text\"] not in wikidata_cache.keys():\n",
+    "            squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
+    "            wikidata_data = query_wikidata_for_single_entity(entity[\"entity_text\"])\n",
+    "            wikidata_cache[entity[\"entity_text\"]] = [{\"id\": candidate[\"id\"], \n",
+    "                                                            \"description\": candidate[\"description\"]} \n",
+    "                                                            for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
+    "                                                            if \"description\" in candidate.keys()]\n",
+    "    write_json_file(DISAMBUGUATION_CACHE_FILE, wikidata_cache)\n",
+    "    for entity in entities:\n",
+    "        entity[\"candidates\"] = dwikidata_cache[entity[\"entity_text\"]]\n",
+    "    return entities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e27c4b7a-0281-4ba4-bebe-84b5de6d03c9",
+   "metadata": {},
+   "source": [
+    "Next we extract the entities from the input data and call a helper function for finding the candidate ids. These will be stored in the entities variable. We show the first item of the results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e0cf3bd-8a63-4b80-8730-79f32e4ff99c",
+   "execution_count": 38,
+   "id": "2df11bef-291b-4dab-b907-8291370ebff4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'entity_text': 'Anubis', 'candidates': [{'id': 'Q14896497', 'description': 'genus of insects'}, {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'}, {'id': 'Q134301689', 'description': 'anti-web scraping software'}, {'id': 'Q135055514', 'description': 'video game developed by OA Game Studio'}, {'id': 'Q145772', 'description': 'asteroid'}, {'id': 'Q5514020', 'description': 'daemon that sits between the Mail User Agent (MUA) and the Mail Transfer Agent (MTA)'}, {'id': 'Q108330387', 'description': 'British Drag Queen'}]}\n"
+     ]
+    }
+   ],
    "source": [
-    "write_json_file(DISAMBUGUATION_CACHE_FILE, disambiguation_cache)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2e9a708-eee9-45f0-b664-ec819d12cb16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for entity in entities:\n",
-    "    entity[\"candidates\"] = disambiguation_cache[entity[\"entity_text\"]]"
+    "entities = extract_entities_from_ner_input(texts_input)\n",
+    "entities = find_wikidata_candidates_for_entities(entities)\n",
+    "print({key: entities[0][key] for key in ['entity_text', 'candidates']})"
    ]
   },
   {
@@ -285,12 +311,44 @@
    "id": "e48267cd-7e1b-4128-9f32-4ac20a54628b",
    "metadata": {},
    "source": [
-    "## 4. Disambiguate entities with GPT"
+    "## 4. Disambiguate entities with GPT\n",
+    "\n",
+    "We disambiguate entities by sending a prompt with each entity text, the context text and the WikiData candidates ids and their descriptions to an LLM. We ask the LLM to return the id associated with the description that best matches the entity in the given context."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeb61643-a253-4dc4-a705-6475a4a78e55",
+   "metadata": {},
+   "source": [
+    "First we define four helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_prompt(entity, text, candidates):\n",
+    "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
+    "    return f\"\"\"\n",
+    "Disambiguate the entity \"{entity}\" in the following text.\n",
+    "\n",
+    "{text}\n",
+    "\n",
+    "Here are the candidates, in json format:\n",
+    "\n",
+    "{candidates}\n",
+    "\n",
+    "Only return the relevant id, nothing else.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "5c70ab90-9295-4c8f-9297-71353572c75e",
    "metadata": {},
    "outputs": [],
@@ -314,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "88389bc3-40ce-48fc-9178-b3c3e58edf6f",
    "metadata": {},
    "outputs": [],
@@ -326,78 +384,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_prompt(entity, text, candidates):\n",
-    "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
-    "    return f\"\"\"\n",
-    "Disambiguate the entity \"{entity}\" in the following text.\n",
-    "\n",
-    "{text}\n",
-    "\n",
-    "Here are the candidates, in json format:\n",
-    "\n",
-    "{candidates}\n",
-    "\n",
-    "Only return the relevant id, nothing else.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "541cb7d5-8807-4156-9d4f-ae35cd2def12",
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_text_with_gpt(openai_client, model, prompt):\n",
     "    \"\"\"Send text to OpenAI via prompt and return results\"\"\"\n",
-    "    response = openai_client.chat.completions.create(\n",
-    "        model=model,\n",
-    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
-    "    )\n",
-    "    return response.choices[0].message.content"
+    "    try:\n",
+    "        response = openai_client.chat.completions.create(\n",
+    "            model=model,\n",
+    "            messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "        )\n",
+    "        return response.choices[0].message.content\n",
+    "    except:\n",
+    "        print(f\"{char_failure} GPT call failed\")\n",
+    "        return []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef64fd3d-e7fc-41b7-b505-57c0425ef9a3",
+   "metadata": {},
+   "source": [
+    "Next, we create a prompt for each entity, send it to the LLM and collect the responses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
+   "id": "0e26b3f8-1d1f-435b-91a5-989cfc599d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entity_text': 'Anubis',\n",
+       " 'text_id': 0,\n",
+       " 'text': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115',\n",
+       " 'candidates': [{'id': 'Q14896497', 'description': 'genus of insects'},\n",
+       "  {'id': 'Q47534',\n",
+       "   'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'},\n",
+       "  {'id': 'Q134301689', 'description': 'anti-web scraping software'},\n",
+       "  {'id': 'Q135055514',\n",
+       "   'description': 'video game developed by OA Game Studio'},\n",
+       "  {'id': 'Q145772', 'description': 'asteroid'},\n",
+       "  {'id': 'Q5514020',\n",
+       "   'description': 'daemon that sits between the Mail User Agent (MUA) and the Mail Transfer Agent (MTA)'},\n",
+       "  {'id': 'Q108330387', 'description': 'British Drag Queen'}],\n",
+       " 'wikidata_id': {'gpt-4o-mini': {'id': 'Q47534',\n",
+       "   'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'}}}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entities[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "id": "75deea80-7bab-41cf-b0ac-fb4217c3010a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing\n"
+     ]
+    }
+   ],
    "source": [
+    "DISAMBUGUATION_CACHE_FILE_GPT = \"disambiguation_cache_gpt.json\"\n",
     "model = \"gpt-4o-mini\"\n",
     "\n",
     "openai_api_key = get_openai_api_key()\n",
     "openai_client = connect_to_openai(openai_api_key)\n",
+    "gpt_cache = read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
     "for entity in entities:\n",
-    "    squeal(f\"Processing text: {entity['text_id'] + 1}; entity: {entity['entity_text']}\")\n",
-    "    prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
-    "    entity[\"wikidata_id\"] = process_text_with_gpt(openai_client, model, prompt)\n",
+    "    if (entity[\"entity_text\"] in gpt_cache and \n",
+    "        entity[\"text\"] in gpt_cache[entity[\"entity_text\"]] and\n",
+    "        model in gpt_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
+    "        wikidata_id = gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
+    "    else:\n",
+    "        squeal(f\"Processing text: {entity['text_id'] + 1}; entity: {entity['entity_text']}\")\n",
+    "        prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
+    "        entity[\"wikidata_id\"] = {model: process_text_with_gpt(openai_client, model, prompt)}\n",
+    "        if entity[\"entity_text\"] not in gpt_cache:\n",
+    "            gpt_cache[entity[\"entity_text\"]] = {}\n",
+    "        if entity[\"text\"] not in gpt_cache[entity[\"entity_text\"]]:\n",
+    "            gpt_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
+    "        gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = entity[\"wikidata_id\"]\n",
+    "write_json_file(DISAMBUGUATION_CACHE_FILE_GPT, gpt_cache)\n",
     "print(\"Finished processing\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2813ec99-f836-4497-99a0-bb9c92fc2542",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(entities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9471ec7-8072-4880-9e3a-06585057ea6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[entity[\"wikidata_id\"] for entity in entities]"
    ]
   },
   {
@@ -437,11 +521,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "2f2a0fbf-e365-4e88-ac19-d0a0e1d603b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entity_text': 'Anubis',\n",
+       " 'text_id': 0,\n",
+       " 'text': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115',\n",
+       " 'candidates': [{'id': 'Q14896497', 'description': 'genus of insects'},\n",
+       "  {'id': 'Q47534',\n",
+       "   'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head'},\n",
+       "  {'id': 'Q134301689', 'description': 'anti-web scraping software'},\n",
+       "  {'id': 'Q135055514',\n",
+       "   'description': 'video game developed by OA Game Studio'},\n",
+       "  {'id': 'Q145772', 'description': 'asteroid'},\n",
+       "  {'id': 'Q5514020',\n",
+       "   'description': 'daemon that sits between the Mail User Agent (MUA) and the Mail Transfer Agent (MTA)'},\n",
+       "  {'id': 'Q108330387', 'description': 'British Drag Queen'}],\n",
+       " 'wikidata_id': {'gpt-4o-mini': 'Q47534'}}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entities[0]"
+   ]
   },
   {
    "cell_type": "markdown",
